--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ def systemOs = System.getProperty("os.name").toLowerCase(Locale.ENGLISH)
 
 
 dependencies {
+    'com.google.code.gson:gson:2.10.1'
     shade('org.spongepowered:mixin:0.7.10-SNAPSHOT') {
         exclude module: 'launchwrapper'
         exclude module: 'guava'
